--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
       <br><br><br>
 
       <div id="stat">
-        <p><span class="bold">10k+</span> COMPANIES</p>
-        <p><span class="bold">314</span> TEMPLATES</p>
-        <p><span class="bold">12m+</span> QUERIES</p>
+        <p><span class="bold">10k+</span><br> COMPANIES</p>
+        <p><span class="bold">314</span><br> TEMPLATES</p>
+        <p><span class="bold">12m+</span><br> QUERIES</p>
       </div>  
     </div>
+    <div id="img">
       <img src="./images/image-header-desktop.jpg" alt="Office">
+    </div>
   </main>
 
   <footer>
@@ -36,6 +38,5 @@
       Coded by <a href="#">Rares Iorga</a>.
     </div>
 </footer>
-<a href="./Untitled-1.html">Incercam alta varianta</a>
 </body>
 </html>
