--- a/index.html
+++ b/index.html
@@ -16,19 +16,17 @@
   <main id="main">
     <div id="content">
       <h1>Get <span class="violet">insights</span> that help your business grow.</h1>
-      <br>
       <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
       experience, and overall efficiency.</p>
-      <br><br><br>
-
       <div id="stat">
         <p><span class="bold">10k+</span><br> COMPANIES</p>
-        <p><span class="bold">314</span><br> TEMPLATES</p>
+        <p><span class="bold">314</span><br> TremPLATES</p>
         <p><span class="bold">12m+</span><br> QUERIES</p>
       </div>  
     </div>
+    <div id="img">
     <img src="./images/image-header-desktop.jpg" alt="Office">
-
+    </div>
   </main>
 
   <footer>
